--- a/FullSite/FullWebsite.html
+++ b/FullSite/FullWebsite.html
@@ -30,7 +30,7 @@
          {
            width: 300px;
            height: 100px;
-           background-image: url(logoo.png);
+           background-image: url(logo2.png);
            float: left;
          }
 
